# fastapi-blog

./: docker-compose.yml  pyproject.toml
app/: main.py
app/article/api/: routes.py
app/core/controller/: base_controller.py  base_request.py  base_response.py  base_schema.py
app/core/db/: db.py
app/core/repository/: base_repository.py
app/user/api/: routes.py
app/user/controller/: create_user_controller.py
app/user/controller/request/: create_user_request.py
app/user/controller/response/: create_user_response.py
app/user/repository/: user_repository.py
config/: env.template
docker/: Dockerfile
