[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["timofei.chernykh <timofey.chernyh2012@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
